This file documents API changes since July 2010.

Group.__len__ now returns the number of member symbols defined in the group 